--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "joi": "^17.12.2"
   }
 }
